Fixing image stretching error in user and business profile

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -36,11 +36,9 @@ html {
 	border: solid;
 	border-color: white;
 	border-radius: 200px;
-}
 
-#header_focus_image img {
-	height:  100%;
-	width: 240px;
+	background-size: cover;
+	background-position: center;
 }
 
 #confirm {
